    as a test.
  - Add support for CTCLString::AppendElement(long, const char* format)
  - Add support for mask equals gates as well as define the mask gate base class.  - Add Support for "not mask" and "and mask" gates
May 20, 2005
  - Support for compilation on gcc/g++ 4.0
May 23, 2005
  - Integrate gamma gate redo=======
  - Add Support for "not mask" and "and mask" gates
  - Added support for "gate -list [pattern]" so that users can filter
    the results of the gate -list command
  - Added support for "spectrum -list [pattern]" so that users can filter
    the results of the spectrum -list command
May 27, 2005
  - Added support for a glob like pattern in the switch of the clear, pararmeter
    bind, apply, and pseudo commands.  When a pattern is given after -list, the 
    command returns objects whose name matches the pattern.
May 31, 2005
  - Remove extra copy construction in TreeParameter ThrowIf's.. as that's an 
    enormous performance hit.
June 1, 2005
  - Fix documentation errors in gate command wrt mask gates.

3.0-002
  - Fix defect with guintegrate - was multiply deleting contours during
    integration.
  - Did  a bunch of refactoring to make the integration loop code look nicer.
  - Treeparameter fixes: GUI should save empty units on unit-less variables and
    spectra.  In addition for old files, treevariable -set should have units optional
3.0-003
  - Remove requirement for fortran at config time.

3.0-004
  - Do a bit of recasting in order to make cleaner compiles on ia64 systems.
3.0-005
  - Fix errors in gamma spectrum increment.  When there are no valid parameters
    in an event, the outer loop of the 2d gamma spectrum increment will
    loop almost infinitely and eventually segfault.
3.0-006
   - Retry pipe data source select if it fails with eintr.
   - Fix defect 188 - Grobj files write out spectrum ids rather than 
     names.. The fix will read old files, but new files will use
     names.
